// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > matches snapshot — default state 1`] = `
<div>
  <div
    class="flex flex-col gap-[7px] relative"
  >
    <button
      class="class-select h-controllg bg-grey rounded-xl flex flex-col border px-4 py-1.5 pt-1.5 pb-2.5 text-left cursor-pointer transition-all relative border-grey "
      tabindex="0"
    >
      <div
        class="class-label font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4
peer-focus:text-blue peer-focus:text-[11px] peer-focus:top-1 peer-focus:-translate-y-0 left-0 text-xs11 invalid-false text-dark-grey hasValue-false top-1/2 -translate-y-1/2 "
      >
        Choose option
      </div>
      <div
        class="font-display font-normal text-base leading-[150%] text-black mt-auto"
      />
      <div
        class="absolute right-4 top-4"
      >
        <svg
          aria-hidden="true"
          class="ml-2 w-6 h-6 text-gray-800 transition-transform duration-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </button>
    <input
      type="hidden"
    />
  </div>
</div>
`;

exports[`Select > matches snapshot — open dropdown 1`] = `
<div>
  <div
    class="flex flex-col gap-[7px] relative"
  >
    <button
      class="class-select h-controllg bg-grey rounded-xl flex flex-col border px-4 py-1.5 pt-1.5 pb-2.5 text-left cursor-pointer transition-all relative [box-shadow:0_0_0_1px_blue] border-blue "
      tabindex="0"
    >
      <div
        class="class-label font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4
peer-focus:text-blue peer-focus:text-[11px] peer-focus:top-1 peer-focus:-translate-y-0 left-0 text-xs11 invalid-false text-dark-grey hasValue-false top-1/2 -translate-y-1/2 "
      >
        Choose option
      </div>
      <div
        class="font-display font-normal text-base leading-[150%] text-black mt-auto"
      />
      <div
        class="absolute right-4 top-4"
      >
        <svg
          aria-hidden="true"
          class="ml-2 w-6 h-6 text-gray-800 transition-transform duration-300 rotate-180"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </button>
    <div
      class="absolute bottom-[-10px] w-full"
    >
      <div
        class="py-1 px-2 border border-grey absolute z-[10] rounded-xl bg-white w-full"
      >
        <div
          class="font-display text-[14px] cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 1
        </div>
        <div
          class="font-display text-[14px] cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 2
        </div>
        <div
          class="font-display text-[14px] cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 3
        </div>
      </div>
    </div>
    <input
      type="hidden"
    />
  </div>
</div>
`;

exports[`Select > matches snapshot — selected option 1`] = `
<div>
  <div
    class="flex flex-col gap-[7px] relative"
  >
    <button
      class="class-select h-controllg bg-grey rounded-xl flex flex-col border px-4 py-1.5 pt-1.5 pb-2.5 text-left cursor-pointer transition-all relative [box-shadow:0_0_0_1px_blue] border-blue "
      tabindex="0"
    >
      <div
        class="class-label font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4
peer-focus:text-blue peer-focus:text-[11px] peer-focus:top-1 peer-focus:-translate-y-0 left-0 text-xs11 invalid-false text-dark-grey hasValue text-[11px] top-1 "
      >
        Choose option
      </div>
      <div
        class="font-display font-normal text-base leading-[150%] text-black mt-auto"
      >
        Option 2
      </div>
      <div
        class="absolute right-4 top-4"
      >
        <svg
          aria-hidden="true"
          class="ml-2 w-6 h-6 text-gray-800 transition-transform duration-300 rotate-180"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </button>
    <div
      class="absolute bottom-[-10px] w-full"
    >
      <div
        class="py-1 px-2 border border-grey absolute z-[10] rounded-xl bg-white w-full"
      >
        <div
          class="font-display text-[14px] cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 1
        </div>
        <div
          class="font-display text-[14px] cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 2
        </div>
        <div
          class="font-display text-[14px] cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 3
        </div>
      </div>
    </div>
    <input
      type="hidden"
      value="2"
    />
  </div>
</div>
`;
